--- a/respo/web-admin-feign-dev.yml
+++ b/respo/web-admin-feign-dev.yml
@@ -3,6 +3,10 @@ spring:
     base-url: http://localhost:9411
   application:
     name: hello-spring-cloud-web-admin-feign
+  boot:
+    admin:
+      client:
+        url: http://localhost:8084
   thymeleaf:
     cache: false
     mode: LEGACYHTML5
